# odyssey-monitor

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/provisioning/dashboards/: dashboard.json
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml  rules.yml
src/: app.rs  lib.rs  main.rs  monitor.rs
tests/integration/: mod.rs
