[package]
name = "odyssey-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "*"
alloy = { version = "0.5.4", features = ["network", "providers"] }
alloy-primitives = "0.8.10"
alloy-provider = { version = "0.5.4", features = ["ws"] }
alloy-pubsub = "0.5.4"
alloy-transport-http = "0.5.4"
alloy-transport-ws = "0.5.4"
alloy-rpc-client = "0.5.4"
anyhow = "1.0"
dotenv = "0.15.0"
hex = "0.4.3"
futures = "0.3.23"
lazy_static = "1.5.0"
prometheus = "0.13.4"
prometheus-parse = "0.2.5"
reqwest = { version = "0.12.5", features = ["json"] }
retry-policies = "*" # let reqwest-retry pick the version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "*"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"

[[bin]]
name = "odyssey-monitor"
path = "src/main.rs"

[lib]
name = "odyssey_monitor"
src = "src/lib.rs"

[[test]]
name = "tests"
path="tests/integration/mod.rs"
