[package]
name = "odyssey-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
alloy = { version = "0.15.6", features = ["network", "providers"] }
alloy-primitives = "1.0.0"
alloy-provider = { version = "0.15.6", features = ["ws"] }
alloy-pubsub = "0.15.6"
alloy-transport-ws = "0.15.6"
anyhow = "1.0"
dotenv = "0.15.0"
futures = "0.3.23"
lazy_static = "1.5.0"
prometheus = "0.13.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"

[dev-dependencies]
actix-rt = "*"
prometheus-parse = "0.2.5"
reqwest = { version = "0.12.5" }

[[bin]]
name = "odyssey-monitor"
path = "src/main.rs"

[lib]
name = "odyssey_monitor"
src = "src/lib.rs"

[[test]]
name = "tests"
path="tests/integration/mod.rs"
